# uwubot2

./: .gitignore  Cargo.toml  PrivacyPolicy.md  TermsOfService.md  banned.json  leaderboard.json  matter.json  messages.json
src/: banned.rs  checks.rs  happy_birthday.rs  immune.rs  leaderboard.rs  logger.rs  long_form.rs  main.rs  matter.rs  users.rs
src/commands/: ban.rs  leaderboard.rs  mod.rs  ping.rs  reg_birthday.rs  unban.rs  uwu.rs
