[package]
name = "uwubot2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
chrono-tz = "0.9.0"
dashmap = "5.5.3"
env_logger = "0.11.3"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
walkdir = "2.5.0"
